#216 Fixed contrast
Het contrast van de input fields op de beige achtergrond is nu verbeterd door een outline met een donkerdere kleur toe te voegen op de input fields.

Ik heb outline gebruikt om kleine layout shifts te voorkomen.

--- a/static/style.css
+++ b/static/style.css
@@ -38,7 +38,9 @@ html {
 
 	--text-color-white: #fff;
 	--text-color-black: #000;
+
 	--invalid-color-red: #ff0000;
+	--input-border-color: #B37400;
 
 	--header-font: 'Poppins-Black', sans-serif;
 	--sub-header-font: 'Poppins-Bold', sans-serif;
